--- a/src/components/chat/Chat.module.sass
+++ b/src/components/chat/Chat.module.sass
@@ -56,3 +56,47 @@
       border-radius: 50%
       width: 2rem
       height: 2rem
+
+    &__content
+      flex: 1
+      width: 100%
+
+    &__html
+      width: 100%
+
+      h3
+        color: $main-contrast
+        margin: 1rem 0 0.5rem
+        font-size: 1.3rem
+        font-weight: bold
+
+      p
+        margin: 0.5rem 0
+        line-height: 1.5
+
+        &.relevancia
+          background: rgba(79, 86, 255, 0.1)
+          padding: 0.75rem 1rem
+          border-left: 3px solid #4f56ff
+          border-radius: 0 0.5rem 0.5rem 0
+          margin: 1rem 0
+          font-style: italic
+
+      a
+        color: #4f56ff
+        text-decoration: none
+        display: inline-block
+        margin: 0.5rem 0
+        padding: 0.5rem 1rem
+        border: 1px solid #4f56ff
+        border-radius: 0.5rem
+        transition: all 0.3s ease
+
+        &:hover
+          background: #4f56ff
+          color: white
+
+      hr
+        border: none
+        border-top: 1px solid $border-color
+        margin: 1rem 0
